--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ python:
   - "3.4"
   - "pypy"
 
+before_install:
+  - sudo apt-get install -y --force-yes slapd time ldap-utils
+
 install: 
   - tests/openldap_install.sh
 
