--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ python:
 before_install:
   - sudo apt-get install -y --force-yes slapd time ldap-utils
 
-install: 
-  - tests/openldap_install.sh
+#install: 
+#  - tests/openldap_install.sh
 
 script: nosetests
 
